--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,120 @@
   font-family: sans-serif;
 }
 
-/*# sourceMappingURL=style.css.map */
+.hero .buynow2, .buynow {
+  border: none;
+  width: 195px;
+  height: 56px;
+  border-radius: 43px;
+  background-color: rgb(62, 168, 59);
+  font-family: "Poppins";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 27px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+.hero .buynow2:hover, .buynow:hover {
+  text-shadow: gray;
+}
+
+.header {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  position: fixed;
+  padding-top: 26px;
+  width: 100%;
+  height: 105px;
+  background-color: white;
+}
+
+.your-logo {
+  margin-left: 389px;
+}
+
+.link {
+  margin-left: 315px;
+  margin-right: 42px;
+  gap: 40px;
+}
+.linkhover {
+  text-shadow: gray;
+}
+
+a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+}
+
+.buynow {
+  padding: 14px 54px;
+}
+
+.rasm {
+  margin-top: 23px;
+  position: relative;
+}
+
+.hero {
+  padding-top: 105px;
+}
+.hero .hero_h2 {
+  max-width: 540px;
+  position: absolute;
+  left: 389px;
+  top: 201px;
+  font-family: "Oswald", sans-serif;
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 54px;
+  text-align: left;
+}
+.hero .hero_h2 .greener {
+  font-family: "Oswald";
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 54px;
+  text-align: left;
+  color: rgb(62, 168, 59);
+}
+.hero .hero_h1 {
+  font-family: "Oswald";
+  font-size: 122px;
+  font-weight: 700;
+  line-height: 69px;
+  text-align: left;
+  color: rgb(62, 168, 59);
+  position: absolute;
+  left: 389px;
+  top: 372px;
+}
+.hero .hero_p {
+  max-width: 391px;
+  font-family: "Oswald";
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 31px;
+  text-align: left;
+  color: rgb(140, 140, 140);
+  position: absolute;
+  left: 389px;
+  top: 550px;
+}
+.hero .buynow2 {
+  padding: 14px 54px;
+  position: absolute;
+  left: 389px;
+  top: 652px;
+}
+.hero .hero_rasm {
+  position: absolute;
+  left: 912px;
+  top: 774px;
+}/*# sourceMappingURL=style.css.map */
