--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,29 @@
-header {
+.header {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  position: fixed;
+  padding-top: 26px;
   width: 100%;
-  height: 200%;
-  background-color: rebeccapurple;
+  height: 105px;
+  background-color: white;
+}
+.your-logo {
+  margin-left: 389px;
+}
+.link {
+  margin-left: 315px;
+  margin-right: 42px;
+  gap: 40px;
+  &hover {
+    text-shadow: gray;
+  }
+}
+a {
+  color: rgba(0, 0, 0, 1);
+  text-decoration: none;
+}
+ul {
+  display: flex;
+  list-style: none;
 }
