--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,36 +33,86 @@
   @extend %buttontmpl;
   padding: 14px 47px;
 }
-.main {
-  max-height: 497px;
-}
-.main_bottom {
-  display: flex;
-  margin-top: 209px;
-  margin-left: 389px;
-  gap: 86px;
-}
-.bottom_left {
-  display: flex;
-  gap: 21px;
-  max-width: 500px;
-  max-height: 157px;
-  .h5 {
-    max-width: 277px;
+.foot {
+  padding-left: 386px;
+
+  padding-top: 116px;
+  margin-top: 96px;
+  width: 1979px;
+  height: 868px;
+  top: 1867px;
+  left: -4px;
+  background-color: rgba(54, 70, 217, 1);
+  .foot_h6 {
     font-family: "Poppins";
-    font-size: 21px;
+    font-size: 19px;
     font-weight: 700;
-    line-height: 28px;
-    text-align: left;
-    color: rgba(54, 55, 57, 1);
-    margin-bottom: 17px;
-  }
-  .p_main {
-    font-family: "Lato";
-    font-size: 16px;
-    font-weight: 400;
     line-height: 23px;
     text-align: left;
-    color: rgba(54, 55, 57, 1);
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 12px;
   }
+  .foot_h2 {
+    max-width: 506px;
+    font-family: "Poppins";
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 53px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 30px;
+  }
+  .foot_p {
+    max-width: 478px;
+    font-family: "Lato";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 29px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 64px;
+  }
+  .foot_img {
+    display: flex;
+    align-items: center;
+    gap: 19px;
+    .img-p {
+      font-family: "Poppins";
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 45px;
+      text-align: left;
+      color: rgba(255, 255, 255, 1);
+    }
+  }
+}
+.arra {
+  display: flex;
+  width: 751px;
+  height: 583px;
+  bottom: 651px;
+  left: 600px;
+  z-index: 10;
+  position: relative;
+}
+.rec25 {
+  display: flex;
+  height: 583px;
+  top: 1010px;
+  left: 800px;
+  position: absolute;
+}
+.rec14 {
+  display: flex;
+  height: 583px;
+  top: 900px;
+  left: 800px;
+  position: absolute;
+}
+.rec24 {
+  display: flex;
+  height: 583px;
+  top: 1010px;
+  left: 1070px;
+  position: absolute;
 }
